--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -9,9 +9,34 @@
 		<h1>Adicionar notícia</h1>
 		<br/>
 
+		<% if (validacao) { %>
+			<ul>
+				<% for (var i = 0; i < validacao.length; i++) { %>
+					<li>
+						<%= validacao[i].msg %>
+					</li>
+				<% } %>
+			</ul>
+		<% } %>
+
 		<form action="noticias/salvar" method="post">
 			<label>Título</label>
 			<input type="text" id="titulo" name="titulo" placeholder="Título da notícia"></input>
+
+			<br/>
+			
+			<label>Resumo</label>
+			<input type="text" id="resumo" name="resumo" placeholder="Resumo da notícia"></input>
+
+			<br/>
+			
+			<label>Auto</label>
+			<input type="text" id="autor" name="autor" placeholder="Autor da notícia"></input>
+
+			<br/>
+			
+			<label>Data</label>
+			<input type="date" id="data_noticia" name="data_noticia" placeholder="Data da notícia"></input>
 
 			<br/>
 
